gcc/testsuite/gdc.test/compilable/shared_destructor.d
struct MaybeShared
{
    this(this T)()
    {

    }

    ~this()
    {

    }
}

void main() {
    {
        auto aboutToDie = MaybeShared();
    }
    {
        auto aboutToDie = shared MaybeShared();
    }
}
