gcc/testsuite/gdc.test/fail_compilation/fail4206.d

struct s {}
enum var = s;

void main() {}
